tests/ui/type-alias-impl-trait/coherence/coherence.classic.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence.rs:17:1
   |
LL | impl foreign_crate::ForeignTrait for AliasOfForeignType<()> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------------------
   |                                      |
   |                                      type alias impl trait is treated as if it were foreign, because its hidden type could be from a foreign crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
